--- a/wezdrexpress/app_web/index.xhtml
+++ b/wezdrexpress/app_web/index.xhtml
@@ -7,7 +7,7 @@
 <body>
 <script>
 
-window.location.href="view/loginView.xhtml";
+window.location.href="faces/view/loginView.xhtml";
 
 </script>
 </body>
