--- a/wezdrexpress/app_web/resources/componentes/barraComponet.xhtml
+++ b/wezdrexpress/app_web/resources/componentes/barraComponet.xhtml
@@ -11,8 +11,18 @@
 		<composite:attribute name="colorBar" />
 	</composite:interface>
 	<composite:implementation>
-		<div class="barra-titulo" style="background:#{cc.attrs.colorBar}; width: 100%; height: 20%;">
-			<h1 style="color:#{cc.attrs.colorText};" >#{cc.attrs.labelTitulo}</h1>
+	<style>
+	.barra-titulo{
+	width:100%;
+	height:100%;
+	background:#{cc.attrs.colorBar};
+	}
+	.text{
+	color:#{cc.attrs.colorText};
+	}
+	</style>
+		<div class="barra-titulo" style="">
+			<h1 class="text">#{cc.attrs.labelTitulo}</h1>
 		</div>
 	</composite:implementation>
 </html>
