[ezd]-seguridad login

--- a/wezdrexpress/app_web/index.xhtml
+++ b/wezdrexpress/app_web/index.xhtml
@@ -6,8 +6,7 @@
 </head>
 <body>
 <script>
-
-window.location.href="faces/view/loginView.xhtml";
+ window.location.href="security/";
 
 </script>
 </body>
